# gt-case-study-agent

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  build_css.py  main.py  netlify.toml  pyproject.toml  requirements.txt  setup.py  setup_env.ps1  setup_env.sh
.github/workflows/: backend-ci.yml  frontend-ci.yml  netlify-deploy.yml
backend/: .env.example  requirements.txt  run.py  test_references.py
backend/app/: main.py
backend/app/api/: routes.py
backend/app/api/endpoints/: advisor.py
backend/app/core/: config.py  dependencies.py  logging.py
backend/app/models/: advisor.py  factory.py  preprocessor.py
backend/app/utils/: data.py  prompts.py
data/: case-study-inventory.csv
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  index.js
frontend/src/components/: AdviceContent.js  Banner.js  CaseStudyModal.js  ExampleQuestions.js  Footer.js  Header.js  QueryForm.js
frontend/src/pages/: HomePage.js  ResultsPage.js
frontend/src/services/: api.js
frontend/src/theme/: theme.js
frontend/src/utils/: constants.js
netlify/functions/: api.py
src/: prompts.py
src/cli/: __main__.py  app.py
src/data/: loader.py  schema.py
src/models/: advisor.py  factory.py  preprocessor.py
src/tools/: __init__.py  prompt_editor.py
src/utils/: config.py  logging.py  markdown.py
src/web/: __main__.py  app.py
src/web/static/css/: main.css
src/web/templates/: base.html  index.html  results.html
tests/: test_config.py  test_llamaindex.py  test_schema.py
(+1 files in other folders)
